force-app/main/default/objects/Opportunity/fields/IP_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Approval_Number__c</fullName>
    <label>IP Approval Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>