force-app/main/default/objects/Opportunity/fields/IP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Expiration_Date__c</fullName>
    <label>IP Expiration Date</label>
    <type>Date</type>
</CustomField>