force-app/main/default/objects/Opportunity/fields/IP_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Starting_Date__c</fullName>
    <label>IP Starting Date</label>
    <type>Date</type>
</CustomField>